# social-network

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  dev.py  pyproject.toml  test.py
src/api/: application.py  authentication.py  configuration.py
src/api/dtos/: posts.py
src/api/exceptions/: post.py  user.py
src/api/routes/: home.py  post.py
src/datalayer/: dbconfig.py
src/datalayer/models/: post.py  user.py
src/services/: post.py  user.py
templates/: index.html
