[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["Guilherme Iazzetta <guilherme.iazzetta@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.6"}
pydantic-settings = "^2.6.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[tool.taskipy.tasks]
dev = "fastapi dev dev.py"
prod = "uvicorn src.api.application:app --host 0.0.0.0 --port 80 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
